Latest CSS/Html, all bugs squished

--- a/app/van.Web/Content/newstyle.css
+++ b/app/van.Web/Content/newstyle.css
@@ -14,6 +14,23 @@ div.meetingLink a {color: #fc0; text-decoration:none; font-weight: bold; font-si
 
 strong { font-weight: bold; }
 
+div#header ul { border-top: 1px solid #ccc; padding-left: 116px; }
+div#header ul li { float: left;  list-style: none; border-right: 1px solid #ccc; border-right: 1px solid #fff; margin: 0 0; padding: 0 0;}
+div#header ul li a { display: block; padding: 12px 8px 0 8px; font-weight: bold; height: 28px;  } 
+div#header ul li a#homeLink { color: #CF9925; } 
+div#header ul li a:hover { background-color: #fff; } 
+
+div#header div#topbanner { height: 60px; }
+
+div#header img#logo { margin: 3px 0 0 12px; }
+
+div#leftColumn h2, div#rightColumn h2  
+{
+	color: #CF9925; 
+	font-weight: bold; 
+	font-size: 1.1em;
+	margin-left: 6px;  }
+	
 div.nostyleBox 
 {
 	padding: 0px 6px 0px 6px; 
@@ -24,10 +41,10 @@ div.box, div.center-box
 {
 	background: #fff url(/Content/NewImages/box-bg.jpg) no-repeat bottom right; 
 	font-size:.9em; 
-	padding: 6px 6px 18px 6px; 
+	padding: 12px 6px 12px 6px; 
 	margin-bottom: 12px; } 
 
-div.box ul { margin-top: 12px; }	
+div.box ul { margin: 12px; }	
 
 div.box li  
 {
@@ -37,13 +54,6 @@ div.box li
 	background-position: 0 5px;	}
 	
 div.box img { padding-left: 7px; }  
-	
-div#leftColumn h2, div#rightColumn h2  
-{
-	color: #CF9925; 
-	font-weight: bold; 
-	font-size: 1.1em;
-	margin-left: 6px;  }
 
 blockquote {
 	margin:1em;
@@ -58,23 +68,13 @@ blockquote p { margin:.2em; }
 div#header { margin:2em 2em 0 2em;  border:1px solid #eeeeee; height: 101px;
           background: #fff url('/Content/NewImages/box-bg.jpg') no-repeat bottom right;        }
 
-div#header ul { border-top: 1px solid #ccc; margin: 0; padding-left: 110px; }
-div#header ul li { float: left;  list-style: none; border-right: 1px solid #ccc; border-right: 1px solid #fff; margin: 0 0; padding: 0 0;}
-div#header ul li a { display: block; padding: 12px 8px 0 8px; font-weight: bold; height: 28px;  } 
-div#header ul li a:hover { background-color: #fff; } 
-
-div#header div#topbanner { height: 60px; }
-
-div#header img#logo { margin: 3px 0 0 12px; }
-
 
 div#menuIcons  {	margin-top: 4px; }
 div#menuIcons img { margin: 4px 4px; }
 
-div#smelly { width: 600px; font-size: .75em; 
+div#smelly { width: 550px; font-size: .75em; 
              float: right; margin: 0px 20px 0 0; background: #fff url(/Content/NewImages/smallWorld.png) no-repeat top left;
-             height: 46px; padding: 14px 0 0 41px; float: right;
-             background-position: 3px 11px; }
+             height: 46px; padding: 14px 0 0 41px; background-position: 3px 11px; }
 
 div#leftColumn {
 	position:absolute;
@@ -111,31 +111,19 @@ div#centerColumn h2 {
 }
 
 
-div#footer  { background-color: #222; border-top: 1px solid  #CF9925; width: 98%; clear: both; color: #fff; padding: 6px 1%; font-size: .8em; height: 100px; }
-div#footer a { color:  #CF9925; }
+div#footer-box  { clear: both; background-color: #222; border: 1px solid  #CF9925; width: 98%; clear: both; color: #fff; padding: 6px 1%; font-size: .8em; height: 100px; }
+div#footer-box a { color:  #CF9925; }
 
-div#footer li { list-style: none; float: left; }
-div#footer li a { margin: 3px 9px; }
+div#footer-box li { list-style: none; float: left; }
+div#footer-box li a { margin: 3px 9px; }
 
-
-/* clearfix */
-.clearfix:after {
-	content: ".";
+.clearfix:after {content: ".";
 	display: block;
-	clear: both;
-	visibility: hidden;
-	line-height: 0;
 	height: 0;
-}
- 
-.clearfix {
-	display: inline-block;
-}
- 
-html[xmlns] .clearfix {
-	display: block;
-}
- 
-* html .clearfix {
-	height: 1%;
-}
+	clear: both;
+	visibility: hidden;}
+.clearfix {display: inline-block;}
+/* Hides from IE-mac \*/
+* html .clearfix { height: 1%;}
+.clearfix {display: block;}
+/* End hide from IE-mac */
